--- a/reflector/example.ini
+++ b/reflector/example.ini
@@ -58,7 +58,7 @@ Port = 17000
 
 [MMDVM]
 Port = 62030
-DefaultId = 0
+DefaultId = 0   # if the DMR id is zero, this will be used (also used for P25)
 
 [NXDN]
 Port = 41400
