removed all possible configure.h defined values

--- a/reflector/Makefile
+++ b/reflector/Makefile
@@ -25,7 +25,7 @@ INICHECK = inicheck
 include configure.mk
 
 ifeq ($(debug), true)
-CFLAGS = -ggdb3 -W -Werror -c -std=c++11 -MMD -MD
+CFLAGS = -ggdb3 -DDEBUG -W -Werror -c -std=c++11 -MMD -MD
 else
 CFLAGS = -W -Werror -std=c++11 -MMD -MD
 endif
