--- a/reflector/example.ini
+++ b/reflector/example.ini
@@ -77,7 +77,7 @@ Port = 10017
 Port = 34001
 AutoLinkModule = A  # comment out if you want to disable AL
 DefaultCallsign = ALLSTAR
-ClientFilePath = /usr/local/etc/USRPClients.txt
+ClientFilePath = /home/user/urfd/USRPClients.txt
 
 [YSF]
 Port = 42000
@@ -95,27 +95,27 @@ Hostname = xlxapi.rlx.lu
 Suffix = api/exportdmr.php
 Mode = http
 RefreshMin = 179
-FilePath = /usr/local/etc/dmrid.dat
+FilePath = /home/user/urfd/dmrid.dat
 
 [NXDN ID DB]
 Hostname = www.dudetronics.com
 Suffix = ar-dns/NXDN.csv
 Mode = http
 RefreshMin = 181
-FilePath = /usr/local/etc/nxdn.dat
+FilePath = /home/user/urfd/nxdn.dat
 
 [YSF TX/RX DB]
 Hostname = xlxapi.rlx.lu
 Suffix = api/exportysfrepeaters.php
 Mode = http
 RefreshMin = 191
-FilePath = /usr/local/etc/ysfnode.dat
+FilePath = /home/user/urfd/ysfnode.dat
 
 ######### Other File locations
 [Files]
-PidPath = /var/run/urfd.pid
+PidPath =  /var/run/urfd.pid
 JsonPath = /var/log/urfd.json
-WhitelistPath = /usr/local/etc/urfd.whitelist
-BlacklistPath = /usr/local/etc/urfd.blacklist
-InterlinkPath = /usr/local/etc/urfd.interlink
-G3TerminalPath = /usr/local/etc/urfd.terminal
+WhitelistPath  = /home/user/urfd/urfd.whitelist
+BlacklistPath  = /home/user/urfd/urfd.blacklist
+InterlinkPath  = /home/user/urfd/urfd.interlink
+G3TerminalPath = /home/user/urfd/urfd.terminal
