--- a/reflector/example.ini
+++ b/reflector/example.ini
@@ -1,15 +1,16 @@
 ###### URFD CONFIGURATION Example ######
+# comments begin with '#'
 # Do not use quotes, unless in a comment!
 
 [Names]
 Callsign = URF???	# where ? is A-Z or 0-9
 
-SysopEmail = you@somewhere.com
+SysopEmail = me@somewhere.com
 
 # 2-letter country codes are listed at https://www.iban.com/country-codes
-Country = US
+Country = GB
 
-Sponsor = My Ham Club
+Sponsor = My Home Club
 
 [IpAddresses]
 # Binding addresses are usually the 'any' address
@@ -19,16 +20,15 @@ IPv4Binding = 0.0.0.0
 # IPv6Binding = ::
 
 # define if you want to override what urfd finds using ipv4.icanhazip.com
-# IPv4External = 1.2.3.4
-
+# IPv4External = 4.3.2.1
 # define if you want to override what urfd finds using ipv6.icanhazip.com
-# IPv6External = a:b:c:e:f:0:1:2
+# IPv6External = f:e:d:c:b:a:9:0
 
 Transcoder = local # SORRY, but only local TC's are supported right now!
 
 [Modules]
-Modules = ADMSZ
 # Modules = ABCDEFGHIJKLMNOPQRSTUVWXYZ
+Modules = ADMSZ
 Transcoded = A  # comment out if you don't have transcoding hardware
 # Create Descriptions as needed...
 DescriptionA = Transcoded
@@ -58,7 +58,7 @@ Port = 17000
 
 [MMDVM]
 Port = 62030
-DefaultId = 0   # if the DMR id is zero, this will be used (also used for P25)
+DefaultId = 0
 
 [NXDN]
 Port = 41400
@@ -77,7 +77,7 @@ Port = 10017
 Port = 34001
 AutoLinkModule = A  # comment out if you want to disable AL
 DefaultCallsign = ALLSTAR
-ClientFilePath = /home/user/urfd/USRPClients.txt
+ClientFilePath = /usr/local/etc/USRPClients.txt
 
 [YSF]
 Port = 42000
@@ -91,31 +91,30 @@ RegistrationDescription = URF Reflector
 
 ######## Database files
 [DMR ID DB]
-Hostname = xlxapi.rlx.lu
-Suffix = api/exportdmr.php
-Mode = http
-RefreshMin = 179
-FilePath = /home/user/urfd/dmrid.dat
+Mode = http      #### Mode is "http", "file", or "both"
+                 #### if "both", the url will be read first
+FilePath = /usr/local/etc/dmrid.dat # for you to add your own values
+									# will be reloaded quickly, about 10s
+URL = http://xlxapi.rlx.lu/api/exportdmr.php # if Mode "http" or "both"
+RefreshMin = 179 # RefreshMin will only be used if the Mode is "file"
 
 [NXDN ID DB]
-Hostname = www.dudetronics.com
-Suffix = ar-dns/NXDN.csv
 Mode = http
-RefreshMin = 181
-FilePath = /home/user/urfd/nxdn.dat
+FilePath = /usr/local/etc/nxdn.dat
+URL = https://radioid.net/static/nxdn.csv
+RefreshMin = 1440 # radioid.net says this file is updated once/day
 
 [YSF TX/RX DB]
-Hostname = xlxapi.rlx.lu
-Suffix = api/exportysfrepeaters.php
 Mode = http
+FilePath = /usr/local/etc/ysfnode.dat
+URL = http://xlxapi.rlx.lu/api/exportysfrepeaters.php
 RefreshMin = 191
-FilePath = /home/user/urfd/ysfnode.dat
 
 ######### Other File locations
 [Files]
-PidPath =  /var/run/urfd.pid
+PidPath = /var/run/urfd.pid
 JsonPath = /var/log/urfd.json
-WhitelistPath  = /home/user/urfd/urfd.whitelist
-BlacklistPath  = /home/user/urfd/urfd.blacklist
-InterlinkPath  = /home/user/urfd/urfd.interlink
-G3TerminalPath = /home/user/urfd/urfd.terminal
+WhitelistPath = /usr/local/etc/urfd.whitelist
+BlacklistPath = /usr/local/etc/urfd.blacklist
+InterlinkPath = /usr/local/etc/urfd.interlink
+G3TerminalPath = /usr/local/etc/urfd.terminal
