--- a/reflector/example.ini
+++ b/reflector/example.ini
@@ -113,7 +113,7 @@ RefreshMin = 191
 ######### Other File locations
 [Files]
 PidPath = /var/run/urfd.pid
-JsonPath = /var/log/urfd.json
+ReflStatePath = /var/log/urfd.xml
 WhitelistPath = /usr/local/etc/urfd.whitelist
 BlacklistPath = /usr/local/etc/urfd.blacklist
 InterlinkPath = /usr/local/etc/urfd.interlink
