--- a/reflector/Makefile
+++ b/reflector/Makefile
@@ -27,7 +27,7 @@ DBUTIL = dbutil
 include configure.mk
 
 ifeq ($(debug), true)
-CFLAGS = -ggdb3 -DDEBUG -W -Werror -c -std=c++11 -MMD -MD
+CFLAGS = -ggdb3 -DDEBUG -W -Werror -std=c++11 -MMD -MD
 else
 CFLAGS = -W -Werror -std=c++11 -MMD -MD
 endif
