--- a/reflector/example.ini
+++ b/reflector/example.ini
@@ -21,6 +21,7 @@ IPv4Binding = 0.0.0.0
 
 # define if you want to override what urfd finds using ipv4.icanhazip.com
 # IPv4External = 4.3.2.1
+
 # define if you want to override what urfd finds using ipv6.icanhazip.com
 # IPv6External = f:e:d:c:b:a:9:0
 
@@ -39,6 +40,7 @@ DescriptionZ = Temp Meeting
 
 # Protocols
 [Brandmeister]
+Enable = false # Set to true if you've configured BM connections in your urfd.interlink file.
 Port = 10002
 
 [DCS]
@@ -47,11 +49,14 @@ Port = 30051
 [DExtra]
 Port = 30001
 
-[DMRPlus]
-Port =  8880
-
 [DPlus]
 Port = 20001
+
+[G3]
+Enable = true
+
+[DMRPlus]
+Port =  8880
 
 [M17]
 Port = 17000
@@ -74,10 +79,11 @@ ReflectorID = 12345
 Port = 10017
 
 [USRP]
-Port = 34001
-AutoLinkModule = A  # comment out if you want to disable AL
-DefaultCallsign = ALLSTAR
-ClientFilePath = /usr/local/etc/USRPClients.txt
+Enable = false
+Port = 32000
+Module = A # this has to be a transcoded module!
+Callsign = ALLSTAR
+#FilePath = /home/usr/Clients.txt # An experimental area of development
 
 [YSF]
 Port = 42000
@@ -93,20 +99,20 @@ RegistrationDescription = URF Reflector
 [DMR ID DB]
 Mode = http      #### Mode is "http", "file", or "both"
                  #### if "both", the url will be read first
-FilePath = /usr/local/etc/dmrid.dat # for you to add your own values
-									# will be reloaded quickly, about 10s
+FilePath = /home/user/dmrid.dat # for you to add your own values
+								# will be reloaded within 10s
 URL = http://xlxapi.rlx.lu/api/exportdmr.php # if Mode "http" or "both"
-RefreshMin = 179 # RefreshMin will only be used if the Mode is "file"
+RefreshMin = 179
 
 [NXDN ID DB]
 Mode = http
-FilePath = /usr/local/etc/nxdn.dat
+FilePath = /home/user/nxdn.dat
 URL = https://radioid.net/static/nxdn.csv
 RefreshMin = 1440 # radioid.net says this file is updated once/day
 
 [YSF TX/RX DB]
 Mode = http
-FilePath = /usr/local/etc/ysfnode.dat
+FilePath = /home/user/ysfnode.dat
 URL = http://xlxapi.rlx.lu/api/exportysfrepeaters.php
 RefreshMin = 191
 
@@ -114,7 +120,7 @@ RefreshMin = 191
 [Files]
 PidPath = /var/run/urfd.pid
 ReflStatePath = /var/log/urfd.xml
-WhitelistPath = /usr/local/etc/urfd.whitelist
-BlacklistPath = /usr/local/etc/urfd.blacklist
-InterlinkPath = /usr/local/etc/urfd.interlink
-G3TerminalPath = /usr/local/etc/urfd.terminal
+WhitelistPath = /home/user/urfd.whitelist
+BlacklistPath = /home/user/urfd.blacklist
+InterlinkPath = /home/user/urfd.interlink
+G3TerminalPath = /home/user/urfd.terminal
