--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -118,8 +118,9 @@ RefreshMin = 191
 
 ######### Other File locations
 [Files]
-PidPath = /var/run/urfd.pid
-ReflStatePath = /var/log/urfd.xml
+PidPath = /var/run/xlxd.pid
+XmlPath = /var/log/xlxd.xml
+#JsonPath = /var/tmp/urfd.json   # for future development
 WhitelistPath = /home/user/urfd.whitelist
 BlacklistPath = /home/user/urfd.blacklist
 InterlinkPath = /home/user/urfd.interlink
