USRP parameters for two-way client

--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -12,7 +12,7 @@ Country = GB
 
 Sponsor = My Home Club
 
-[IpAddresses]
+[IP Addresses]
 # Binding addresses are usually the 'any' address
 IPv4Binding = 0.0.0.0
 
@@ -80,10 +80,11 @@ Port = 10017
 
 [USRP]
 Enable = false
-Port = 32000
+RxPort = 34000
+TxPort = 32000
 Module = A # this has to be a transcoded module!
 Callsign = ALLSTAR
-#FilePath = /home/usr/Clients.txt # An experimental area of development
+#FilePath = /home/usr/Clients.txt
 
 [YSF]
 Port = 42000
