fixed some problems Doug found

--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -80,6 +80,7 @@ Port = 10017
 
 [USRP]
 Enable = false
+IPAddress = 1.2.3.4 # the IP address of the USRP client (the Allstar node)
 RxPort = 34000
 TxPort = 32000
 Module = A # this has to be a transcoded module!
