--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -80,12 +80,12 @@ Port = 10017
 
 [USRP]
 Enable = false
+Callsign = ALLSTAR  # set to NONE if you don't want to create this client
 IPAddress = 1.2.3.4 # the IP address of the USRP client (the Allstar node)
 RxPort = 34000
 TxPort = 32000
 Module = A # this has to be a transcoded module!
-Callsign = ALLSTAR
-#FilePath = /home/usr/Clients.txt
+#FilePath = /home/usr/clients.txt  # a list of listen-only clients
 
 [YSF]
 Port = 42000
