added bootstrap string to config

--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -12,6 +12,11 @@ Country = GB
 
 Sponsor = My Home Club
 
+# Bootstrap is the internet address of any existing DHT client.
+# Usually, choose a frequented, or close, reflector if it's already a DHT
+# client. If that's not possible, you can use xrf757.openquad.net
+Bootstrap = xrf757.openquad.net
+
 [IP Addresses]
 # Binding addresses are usually the 'any' address
 IPv4Binding = 0.0.0.0
