--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -12,6 +12,9 @@ Country = GB
 
 Sponsor = My Home Club
 
+# DashboardURL is where your dashboard for this reflector is avaiable on the WWW.
+DashboardUrl = https://YourDashboard.net
+
 # Bootstrap is the internet address of any existing DHT client.
 # Usually, choose a frequented, or close, reflector if it's already a DHT
 # client. If that's not possible, you can use xrf757.openquad.net
