--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -3,7 +3,7 @@
 # Do not use quotes, unless in a comment!
 
 [Names]
-Callsign = URF???	# where ? is A-Z or 0-9
+Callsign = URF???	# where ? is A-Z or 0-9. NO EXCEPTIONS!
 
 SysopEmail = me@somewhere.com
 
