a new TCP socket

--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -33,18 +33,21 @@ IPv4Binding = 0.0.0.0
 # define if you want to override what urfd finds using ipv6.icanhazip.com
 # IPv6External = f:e:d:c:b:a:9:0
 
-Transcoder = local # SORRY, but only local TC's are supported right now!
-
 [Modules]
 # Modules = ABCDEFGHIJKLMNOPQRSTUVWXYZ
 Modules = ADMSZ
-Transcoded = A  # comment out if you don't have transcoding hardware
 # Create Descriptions as needed...
 DescriptionA = Transcoded
 DescriptionD = DMR Chat
 DescriptionM = M17 Chat
 DescriptionS = DStar Chat
 DescriptionZ = Temp Meeting
+
+[Transcoder]
+Port = 10100 # TCP listening port for connection(s), set to 0 if there is no transcoder, then other two values will be ignored
+BindingAddress = 127.0.0.1 # or ::1, the IPv4 or IPv6 "loop-back" address for a local transcoder
+# For a connection to a remote transcoder, usually use the "any" address: 0.0.0.0 or ::
+Modules = A # Transcoded modules one or three modules, depending on the hardware
 
 # Protocols
 [Brandmeister]
