fixed crash when no autolink module was specified

--- a/config/urfd.ini
+++ b/config/urfd.ini
@@ -37,7 +37,7 @@ IPv4Binding = 0.0.0.0
 # Modules = ABCDEFGHIJKLMNOPQRSTUVWXYZ
 Modules = ADMSZ
 # Create Descriptions as needed...
-DescriptionA = Transcoded
+DescriptionA = All Modes
 DescriptionD = DMR Chat
 DescriptionM = M17 Chat
 DescriptionS = DStar Chat
@@ -91,7 +91,7 @@ Port = 10017
 
 [USRP]
 Enable = false
-Callsign = ALLSTAR  # set to NONE if you don't want to create this client
+Callsign = ALLSTAR
 IPAddress = 1.2.3.4 # the IP address of the USRP client (the Allstar node)
 RxPort = 34000
 TxPort = 32000
